--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "google/apiclient": "^2.18",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-google-calendar": "^3.8",
-        "spatie/laravel-permission": "^6.16"
+        "spatie/laravel-permission": "^6.16",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
