--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.17",
+        "@fullcalendar/daygrid": "^6.1.17",
         "chart.js": "^4.4.9"
     }
 }
