--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "google/apiclient": "^2.18",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
