--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "google/apiclient": "^2.18",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
